--- a/css/main.css
+++ b/css/main.css
@@ -289,10 +289,14 @@ a{color:inherit;text-decoration:none}
 .foot-lnk{
     text-align:center;
 }
-.extractors{
+.table{
     display: inline;
     text-align: center;
     padding: 10px;
 
 }
-.tr
+td  {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
