--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ ul dropbtn {
     font-family: Raleway-Regular;
     font-size: 35px;
     width: 100%;
+    border: 1px solid black;
     
 }
 #bg {
@@ -32,6 +33,7 @@ background-image: url("../img/mt.jpg")
     transition: 500ms;
     box-shadow: 0 4px 2px -2px transparent;
     z-index:9999
+
 
 }
 #nav a:hover {
@@ -113,7 +115,7 @@ p {
 .search.active,
 .search:hover {
     width: 200px;
-    margin-right: 0px;
+    margin-right: px;
 }
 .search.active:after,
 .search:hover:after {
@@ -292,11 +294,19 @@ a{color:inherit;text-decoration:none}
 .table{
     display: inline;
     text-align: center;
+    border: 0px;
     padding: 10px;
 
 }
 td  {
     border: 1px solid #dddddd;
-    text-align: left;
+    text-align: center;
     padding: 8px;
+    border: 1px solid black;
+}
+.nav-dropdown{
+    font-size: 15px;
+    font-weight: bold;
+    border: 1px solid black;
+
 }
