--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ ul dropbtn {
     font-size: 35px;
     width: 100%;
     border: 1px solid black;
+    border-radius: 5px;
     
 }
 #bg {
@@ -60,6 +61,7 @@ background-image: url("../img/mt.jpg")
     position:absolute;
     width:150px;
     background-image:url("../img/mt.jpg")
+
     }
 li:hover .nav-dropdown{display:block}
 
@@ -92,12 +94,13 @@ p {
     height: 35px;
     width: 35px;
     box-sizing: border-box;
-    margin: 0px 8px 7px 0px;
+    margin: 0px 10px 7px 0px;
     padding: 7px 9px 0px 9px;
     border: 3px solid black;
     border-radius: 25px;
     transition: all 200ms ease;
     cursor: text;
+
 }
 .search:after {
     content: "";
@@ -139,6 +142,7 @@ svg {
     height: 37px;
     width: 37px;
     display: inline;
+
 }
 
 .login{
@@ -166,7 +170,7 @@ a{color:inherit;text-decoration:none}
     height:100%;
     position:absolute;
     padding:90px 70px 50px 70px;
-    background:rgba(40,57,101,.9);
+    background-image: url("../img/mt.jpg")
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -223,14 +227,14 @@ a{color:inherit;text-decoration:none}
     border:none;
     padding:15px 20px;
     border-radius:25px;
-    background:rgba(255,255,255,.1);
+    background:white);
 }
 .login-form .group input[data-type="password"]{
     text-security:circle;
     -webkit-text-security:circle;
 }
 .login-form .group .label{
-    color:#aaa;
+    color:black;
     font-size:12px;
 }
 .login-form .group .button{
@@ -242,7 +246,7 @@ a{color:inherit;text-decoration:none}
     border-radius:2px;
     position:relative;
     display:inline-block;
-    background:rgba(255,255,255,.1);
+    background:gray;
 }
 .login-form .group label .icon:before,
 .login-form .group label .icon:after{
@@ -297,16 +301,28 @@ a{color:inherit;text-decoration:none}
     border: 0px;
     padding: 10px;
 
+
 }
 td  {
     border: 1px solid #dddddd;
     text-align: center;
     padding: 8px;
-    border: 1px solid black;
+    border: 1px solid lightgray;
+    font-size: 20px;
+    border-radius: 5px;
+    
+
 }
 .nav-dropdown{
     font-size: 15px;
     font-weight: bold;
     border: 1px solid black;
+
+}
+.cle {
+    display: inline-block;
+}
+tr {
+
 
 }
