--- a/css/main.css
+++ b/css/main.css
@@ -1,329 +1,374 @@
-*
-{
-    margin: 0; padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-
-body {background-image: url("../img/4kmdl2.jpg");
-    -webkit-background-size: cover;
-    background-size: ;
-    background-attachment: fixed;
-    overflow:hidden;
+body {
+  background-image: url("../img/4kmdl2.jpg");
+  -webkit-background-size: cover;
+  background-size: ;
+  background-attachment: fixed;
+  overflow: hidden;
 }
-#header{
-    padding: 8.8%;}
-ul {list-style: none;}
-a {text-decoration: none;}
+
+#header {
+  padding: 8.8%;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 ul dropbtn {
-    margin: auto;
-    width: 1500px;
+  margin: auto;
+  width: 1500px;
 }
-#nav{
-    font-family: Raleway-Regular;
-    font-size: 35px;
-    width: 100%;
-    border: 1px solid black;
-    border-radius: 5px;
-    
+
+#nav {
+  font-family: Raleway-Regular;
+  font-size: 35px;
+  width: 100%;
+  border: 1px solid black;
+  border-radius: 5px;
 }
+
 #bg {
-background-image: url("../img/mt.jpg")
+  background-image: url("../img/mt.jpg")
 }
-#nav a{
-    color: #000;
-    transition: 500ms;
-    box-shadow: 0 4px 2px -2px transparent;
-    z-index:9999
 
-
+#nav a {
+  color: #000;
+  transition: 500ms;
+  box-shadow: 0 4px 2px -2px transparent;
+  z-index: 9999
 }
+
 #nav a:hover {
-    color: #1d399c;
-    box-shadow: 0 4px 2px -2px #c1c6cc;
-    border-bottom: 200px;
-    padding-bottom: 4px;
-    margin-bottom: -4px;
+  color: #1d399c;
+  box-shadow: 0 4px 2px -2px #c1c6cc;
+  border-bottom: 200px;
+  padding-bottom: 4px;
+  margin-bottom: -4px;
 }
-@font-face
-{font-family:Raleway-Regular;
-    src: url(../fonts/Raleway-Regular.ttf)format("truetype")
-}
-#nav nav ul li{
-    display: inline-block;
-    margin-right: 30px;
 
+@font-face {
+  font-family: Raleway-Regular;
+  src: url(../fonts/Raleway-Regular.ttf)format("truetype")
 }
+
+#nav nav ul li {
+  display: inline-block;
+  margin-right: 30px;
+}
+
 #form {
-    float: right;
-    margin-top: 250px;
+  float: right;
 }
-.nav-dropdown{display:none;
-    position:absolute;
-    width:150px;
-    background-image:url("../img/mt.jpg")
 
-    }
-li:hover .nav-dropdown{display:block}
+.nav-dropdown {
+  display: none;
+  position: absolute;
+  width: 150px;
+  background-image: url("../img/mt.jpg")
+}
+
+li:hover .nav-dropdown {
+  display: block
+}
 
 /*** COLORS ***/
+
 /*** DEMO ***/
-html,
-body {
-    height: 100%;
-    margin: 0;
+
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
 }
+
 p {
-    margin-top: 30px;
+  margin-top: 30px;
 }
-.cntr {
-    display: table;
-    width: 100%;
-    height: 100%;
-}
-.cntr .cntr-innr {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-}
-/*** STYLES ***/
-.search {
-    display: inline-block;
-    position: relative;
-    height: 35px;
-    width: 35px;
-    box-sizing: border-box;
-    margin: 0px 10px 7px 0px;
-    padding: 7px 9px 0px 9px;
-    border: 3px solid black;
-    border-radius: 25px;
-    transition: all 200ms ease;
-    cursor: text;
 
+.cntr {
+  display: table;
+  width: 100%;
+  height: 100%;
 }
+
+.cntr .cntr-innr {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+
+/*** STYLES ***/
+
+.search {
+  display: inline-block;
+  position: relative;
+  height: 35px;
+  width: 35px;
+  box-sizing: border-box;
+  margin: 0px 10px 7px 0px;
+  padding: 7px 9px 0px 9px;
+  border: 3px solid black;
+  border-radius: 25px;
+  transition: all 200ms ease;
+  cursor: text;
+}
+
 .search:after {
-    content: "";
-    position: absolute;
-    width: 3px;
-    height: 20px;
-    right: -5px;
-    top: 21px;
-    background: black;
-    border-radius: 3px;
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    transition: all 200ms ease;
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 20px;
+  right: -5px;
+  top: 21px;
+  background: black;
+  border-radius: 3px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all 200ms ease;
 }
-.search.active,
-.search:hover {
-    width: 200px;
-    margin-right: px;
+
+.search.active, .search:hover {
+  width: 200px;
+  margin-right: px;
 }
-.search.active:after,
-.search:hover:after {
-    height: 0px;
+
+.search.active:after, .search:hover:after {
+  height: 0px;
 }
+
 .search input {
-    width: 100%;
-    border: none;
-    box-sizing: border-box;
-    font-family: Helvetica;
-    font-size: 15px;
-    color: inherit;
-    background: transparent;
-    outline-width: 0px;
+  width: 100%;
+  border: none;
+  box-sizing: border-box;
+  font-family: Helvetica;
+  font-size: 15px;
+  color: inherit;
+  background: transparent;
+  outline-width: 0px;
 }
 
 li.LC {
-    width: 100%;
+  width: 100%;
 }
+
 svg {
-    height: 37px;
-    width: 37px;
-    display: inline;
-
+  height: 37px;
+  width: 37px;
+  display: inline;
 }
 
-.login{
-    color:#6a6f8c;
-    font:600 16px/18px 'Open Sans',sans-serif;
-    position: relative;
-    
-}
-*,:after,:before{box-sizing:border-box}
-.clearfix:after,.clearfix:before{content:'';display:table}
-.clearfix:after{clear:both;display:block}
-a{color:inherit;text-decoration:none}
-
-.login-wrap{
-    width:100%;
-    margin:auto;
-    max-width:525px;
-    min-height:670px;
-    position:relative;
-
-    box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-}
-.login-html{
-    width:100%;
-    height:100%;
-    position:absolute;
-    padding:90px 70px 50px 70px;
-    background-image: url("../img/mt.jpg")
-
-}
-.login-html .sign-in-htm,
-.login-html .sign-up-htm{
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    position:absolute;
-    transform:rotateY(180deg);
-    backface-visibility:hidden;
-    transition:all .4s linear;
-}
-.login-html .sign-in,
-.login-html .sign-up,
-.login-form .group .check{
-    display:none;
-}
-.login-html .tab,
-.login-form .group .label,
-.login-form .group .button{
-    text-transform:uppercase;
-}
-.login-html .tab{
-    font-size:22px;
-    margin-right:15px;
-    padding-bottom:5px;
-    margin:0 15px 10px 0;
-    display:inline-block;
-    border-bottom:2px solid transparent;
-}
-.login-html .sign-in:checked + .tab,
-.login-html .sign-up:checked + .tab{
-    color:#fff;
-    border-color:#1161ee;
-}
-.login-form{
-    min-height:345px;
-    position:relative;
-    perspective:1000px;
-    transform-style:preserve-3d;
-}
-.login-form .group{
-    margin-bottom:15px;
-}
-.login-form .group .label,
-.login-form .group .input,
-.login-form .group .button{
-    width:100%;
-    color:#fff;
-    display:block;
-}
-.login-form .group .input,
-.login-form .group .button{
-    border:none;
-    padding:15px 20px;
-    border-radius:25px;
-    background:white);
-}
-.login-form .group input[data-type="password"]{
-    text-security:circle;
-    -webkit-text-security:circle;
-}
-.login-form .group .label{
-    color:black;
-    font-size:12px;
-}
-.login-form .group .button{
-    background:#1161ee;
-}
-.login-form .group label .icon{
-    width:15px;
-    height:15px;
-    border-radius:2px;
-    position:relative;
-    display:inline-block;
-    background:gray;
-}
-.login-form .group label .icon:before,
-.login-form .group label .icon:after{
-    content:'';
-    width:10px;
-    height:2px;
-    background:#fff;
-    position:absolute;
-    transition:all .2s ease-in-out 0s;
-}
-.login-form .group label .icon:before{
-    left:3px;
-    width:5px;
-    bottom:6px;
-    transform:scale(0) rotate(0);
-}
-.login-form .group label .icon:after{
-    top:6px;
-    right:0;
-    transform:scale(0) rotate(0);
-}
-.login-form .group .check:checked + label{
-    color:#fff;
-}
-.login-form .group .check:checked + label .icon{
-    background:#1161ee;
-}
-.login-form .group .check:checked + label .icon:before{
-    transform:scale(1) rotate(45deg);
-}
-.login-form .group .check:checked + label .icon:after{
-    transform:scale(1) rotate(-45deg);
-}
-.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{
-    transform:rotate(0);
-}
-.login-html .sign-up:checked + .tab + .login-form .sign-up-htm{
-    transform:rotate(0);
+.login {
+  color: #6a6f8c;
+  font: 600 16px/18px 'Open Sans', sans-serif;
+  position: relative;
 }
 
-.hr{
-    height:2px;
-    margin:60px 0 50px 0;
-    background:rgba(255,255,255,.2);
+*, :after, :before {
+  box-sizing: border-box
 }
-.foot-lnk{
-    text-align:center;
+
+.clearfix:after, .clearfix:before {
+  content: '';
+  display: table
 }
-.table{
-    display: inline;
-    text-align: center;
-    border: 0px;
-    padding: 10px;
 
-
+.clearfix:after {
+  clear: both;
+  display: block
 }
-td  {
-    border: 1px solid #dddddd;
-    text-align: center;
-    padding: 8px;
-    border: 1px solid lightgray;
-    font-size: 20px;
-    border-radius: 5px;
 
-
+a {
+  color: inherit;
+  text-decoration: none
 }
-.nav-dropdown{
-    font-size: 15px;
-    font-weight: bold;
-    border: 1px solid black;
 
+.login-wrap {
+  width: 100%;
+  margin: auto;
+  max-width: 525px;
+  min-height: 670px;
+  position: relative;
+  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
 }
+
+.login-html {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: 90px 70px 50px 70px;
+  background-image: url("../img/mt.jpg")
+}
+
+.login-html .sign-in-htm, .login-html .sign-up-htm {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  transition: all .4s linear;
+}
+
+.login-html .sign-in, .login-html .sign-up, .login-form .group .check {
+  display: none;
+}
+
+.login-html .tab, .login-form .group .label, .login-form .group .button {
+  text-transform: uppercase;
+}
+
+.login-html .tab {
+  font-size: 22px;
+  margin-right: 15px;
+  padding-bottom: 5px;
+  margin: 0 15px 10px 0;
+  display: inline-block;
+  border-bottom: 2px solid transparent;
+}
+
+.login-html .sign-in:checked+.tab, .login-html .sign-up:checked+.tab {
+  color: #fff;
+  border-color: #1161ee;
+}
+
+.login-form {
+  min-height: 345px;
+  position: relative;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+
+.login-form .group {
+  margin-bottom: 15px;
+}
+
+.login-form .group .label, .login-form .group .input, .login-form .group .button {
+  width: 100%;
+  color: #fff;
+  display: block;
+}
+
+.login-form .group .input, .login-form .group .button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 25px;
+  background: white);
+}
+
+.login-form .group input[data-type="password"] {
+  text-security: circle;
+  -webkit-text-security: circle;
+}
+
+.login-form .group .label {
+  color: black;
+  font-size: 12px;
+}
+
+.login-form .group .button {
+  background: #1161ee;
+}
+
+.login-form .group label .icon {
+  width: 15px;
+  height: 15px;
+  border-radius: 2px;
+  position: relative;
+  display: inline-block;
+  background: gray;
+}
+
+.login-form .group label .icon:before, .login-form .group label .icon:after {
+  content: '';
+  width: 10px;
+  height: 2px;
+  background: #fff;
+  position: absolute;
+  transition: all .2s ease-in-out 0s;
+}
+
+.login-form .group label .icon:before {
+  left: 3px;
+  width: 5px;
+  bottom: 6px;
+  transform: scale(0) rotate(0);
+}
+
+.login-form .group label .icon:after {
+  top: 6px;
+  right: 0;
+  transform: scale(0) rotate(0);
+}
+
+.login-form .group .check:checked+label {
+  color: #fff;
+}
+
+.login-form .group .check:checked+label .icon {
+  background: #1161ee;
+}
+
+.login-form .group .check:checked+label .icon:before {
+  transform: scale(1) rotate(45deg);
+}
+
+.login-form .group .check:checked+label .icon:after {
+  transform: scale(1) rotate(-45deg);
+}
+
+.login-html .sign-in:checked+.tab+.sign-up+.tab+.login-form .sign-in-htm {
+  transform: rotate(0);
+}
+
+.login-html .sign-up:checked+.tab+.login-form .sign-up-htm {
+  transform: rotate(0);
+}
+
+.hr {
+  height: 2px;
+  margin: 60px 0 50px 0;
+  background: rgba(255, 255, 255, .2);
+}
+
+.foot-lnk {
+  text-align: center;
+}
+
+.table {
+  display: inline;
+  text-align: center;
+  border: 0px;
+  padding: 10px;
+}
+
+td {
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+  border: 1px solid lightgray;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+.nav-dropdown {
+  font-size: 15px;
+  font-weight: bold;
+  border: 1px solid black;
+}
+
 .cle {
-    display: inline-block;
+  display: inline-block;
 }
-tr {
 
-
-}
+tr {}
